* Fixed issue where weapon spec in shipyard.plist not being applied to new ships.
* Fixed crash when scan_description was defined in shipdata.plist.
* Fixed issue where context was not being considered when adding weapons to player.ship.
* Fixed exception when nil would be passed as an object for a weapon sound when that 
  weapon doesn't exist in equipment.plist.

-------------------------------------------------------------------------------

Changes between Oolite 1.88 and Oolite 1.90:

General:
========
* Custom sounds for specific lasers and specific hit types are
  now defined.
* Increasing opacity of GUI cursor for increased visibility.
* Basic compass now changes shape when switching from planet to
  station and vice versa.
* Cloaked ships do mass lock the player now.
* The number of turrets on a ship, if they exist, is now shown on
  the Ship Library screen.
* Entities designated as excepted for collision with the player will
  now not limit the torus speed variability.
* The Javascript runtime size can now be adjusted by the user.
* Default diffuse light model switched to Oren-Nayar instead of
  Lambert.
* Light radiance and exposure introduced on all main shaders.
* Illumination mapping of the dark side of custom planets is now
  supported on the diffuse map's alpha channel.
* Custom planets now support normal maps, with specular on their alpha
  channel.
* Visual improvements made on atmospheres. Lave has now a blue
  atmosphere like Earth, while Reorte now has a blue planet
  terminator.
* Visual improvements made on planets, which now use correct
  reflectivity values for water and land masses for more realistic
  specular reflections.
* New nav and witchspace beacons deployed, replacing the previous ones.
* Added the ability to limit star and nebula textures to particular
  galaxies, providing the opportunity to make galaxies more visually 
  unique.
* View Keyboard Settings item from start menu has been replaced with